# QuantumKatas

./: .env.example  .gitignore  BENCHMARK_GUIDE.md  DATASET_README.md  DATASET_SUMMARY.md  FILES_REFERENCE.md  FINAL_STATUS.md  IMPROVEMENTS_COMPLETE.md  IMPROVEMENTS_V3.md  IMPROVEMENTS_V4.md  PR_DESCRIPTION.md  QISKIT_DATASET.md  QUICK_START.md  README.md  analyze_failures.py  dataset_metadata.json  evaluate_qiskit_assistant.py  failure_analysis_report.txt  fix_additional_issues.py  fix_critical_issues.py  fix_dataset_comprehensive.py  fix_targeted_issues.py  models.json  pyproject.toml  quantum_katas_dataset.jsonl  quantum_katas_dataset_original.jsonl  quantum_katas_dataset_verified.jsonl  validate_dataset.py  validation_check.txt
.github/workflows/: benchmark-qiskit-assistant.yml
benchmark/: __init__.py  config.py  evaluator.py  models.py  reporter.py  runner.py
benchmark/config_examples/: models.json
dataset/: quantum_katas.jsonl
examples/: run_benchmark.py
